--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Only For BABU ❤️</title>
 
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script>
+(function(){
+ emailjs.init("YOUR_PUBLIC_KEY"); // 🔴 replace
+})();
+</script>
+
 <style>
 :root{--pink:#ff2e63}
 
@@ -68,9 +75,24 @@ button:active{transform:scale(.95)}
  flex-wrap:wrap;
 }
 
-#yesBtn{background:var(--pink);color:white;font-weight:bold;min-width:140px;}
-#noBtn{background:white;color:var(--pink);min-width:140px;}
-#kissBtn{display:none;background:#ff69b4;color:white;font-weight:bold;}
+#yesBtn{
+ background:var(--pink);
+ color:white;
+ font-weight:bold;
+ min-width:140px;
+}
+#noBtn{
+ background:white;
+ color:var(--pink);
+ min-width:140px;
+}
+
+#kissBtn{
+ display:none;
+ background:#ff69b4;
+ color:white;
+ font-weight:bold;
+}
 
 /* ===== EFFECTS ===== */
 @keyframes shake{
@@ -81,25 +103,67 @@ button:active{transform:scale(.95)}
 }
 .nervous{animation:shake .4s infinite}
 
-.glow{animation:glowPulse 1s infinite alternate;}
+.glow{
+ animation:glowPulse 1s infinite alternate;
+}
 @keyframes glowPulse{
  from{box-shadow:0 0 8px rgba(255,46,99,.5)}
  to{box-shadow:0 0 24px rgba(255,46,99,1)}
 }
 
-#message,#counter,#calmText,#thankYou{margin-top:10px;font-weight:500;}
+/* ===== TEXT ===== */
+#message,#counter,#calmText,#thankYou{
+ margin-top:10px;
+ font-weight:500;
+}
 #calmText,#thankYou{display:none}
 
 /* ===== SLIDESHOW ===== */
 #slideshow{display:none;margin-top:14px}
 .slide{display:none}
 .slide.active{display:block}
-.slide img{width:100%;max-width:260px;border-radius:16px;box-shadow:0 8px 20px rgba(0,0,0,.35);}
-.caption{font-size:14px;margin-top:6px;opacity:.9;}
+.slide img{
+ width:100%;
+ max-width:260px;
+ border-radius:16px;
+ box-shadow:0 8px 20px rgba(0,0,0,.35);
+}
+.caption{
+ font-size:14px;
+ margin-top:6px;
+ opacity:.9;
+}
+.caption.big{
+ font-size:18px;
+ margin-top:40px;
+ font-weight:bold;
+}
+#futureMemory{
+ margin-top:10px;
+ font-size:14px;
+ font-style:italic;
+ opacity:.85;
+}
+
+/* ===== COUNTDOWN ===== */
+#countdownBox{
+ display:none;
+ margin-top:14px;
+ background:rgba(0,0,0,.25);
+ padding:12px;
+ border-radius:16px;
+}
 
 /* ===== PASSWORD ===== */
 #lockScreen{text-align:center}
-#lockScreen input{padding:14px;border-radius:20px;border:none;width:220px;font-size:16px;text-align:center;}
+#lockScreen input{
+ padding:14px;
+ border-radius:20px;
+ border:none;
+ width:220px;
+ font-size:16px;
+ text-align:center;
+}
 #unlockBtn{background:var(--pink);color:white}
 </style>
 </head>
@@ -118,6 +182,11 @@ for(let i=0;i<22;i++){
  h.style.fontSize=14+Math.random()*18+"px";
  document.body.appendChild(h);
 }
+function heartsReact(){
+ document.querySelectorAll(".heart").forEach(h=>{
+  h.innerText=["❤️","💗","💕"][Math.floor(Math.random()*3)];
+ });
+}
 </script>
 
 <div id="lockScreen">
@@ -128,19 +197,48 @@ for(let i=0;i<22;i++){
 
 <div class="card" id="mainCard">
  <h2>Risha… will you be my Valentine? 💖</h2>
+
  <div class="buttons-row">
   <button id="yesBtn">Yes BABU 💕</button>
   <button id="noBtn">No 😢</button>
  </div>
+
  <div id="message"></div>
  <div id="counter"></div>
+
  <button id="kissBtn">Kiss BABU 😘</button>
 
  <div id="slideshow">
-  <div class="slide active"><img src="photo1.jpeg"><p class="caption">That day Risha hugged me tighter 🥺</p></div>
-  <div class="slide"><img src="photo2.jpeg"><p class="caption">BABU smiling like this melts me ❤️</p></div>
-  <div class="slide"><img src="photo3.jpeg"><p class="caption">Risha, this moment felt like home</p></div>
-  <div class="slide"><img src="photo4.jpeg"><p class="caption">BABU + me = my safest place</p></div>
+  <div class="slide active">
+   <img src="photo1.jpeg">
+   <p class="caption">That day Risha hugged me tighter 🥺</p>
+  </div>
+  <div class="slide">
+   <img src="photo2.jpeg">
+   <p class="caption">BABU smiling like this melts me ❤️</p>
+  </div>
+  <div class="slide">
+   <img src="photo3.jpeg">
+   <p class="caption">Risha, this moment felt like home</p>
+  </div>
+  <div class="slide">
+   <img src="photo4.jpeg">
+   <p class="caption">BABU + me = my safest place</p>
+  </div>
+  <div class="slide">
+   <img src="photo5.jpeg">
+   <p class="caption">Every memory with you matters 🤍</p>
+  </div>
+  <div class="slide">
+   <p class="caption big">More memories loading… 💞</p>
+  </div>
+  <div id="futureMemory">Add new memory someday… ✨</div>
+ </div>
+
+ <div id="countdownBox">
+  ⏳ Our next date, BABU…<br>
+  <span id="countdownText">Date not decided yet 💭</span><br><br>
+  <input type="date" id="datePicker">
  </div>
 
  <div id="calmText">My heart is calm now ❤️</div>
@@ -148,67 +246,149 @@ for(let i=0;i<22;i++){
 </div>
 
 <script>
+/* CONFIG */
 const PASSWORD="Us_1402";
+const SERVICE_ID="YOUR_SERVICE_ID";
+const TEMPLATE_ID="YOUR_TEMPLATE_ID";
+
 const bgMusic = document.getElementById("bgMusic");
 
-/* UNLOCK & START MUSIC */
+/* UNLOCK & PLAY MUSIC */
 unlockBtn.onclick = () => {
   const passwordInput = document.getElementById("password");
   if (passwordInput.value === PASSWORD) {
     lockScreen.style.display = "none";
     mainCard.style.display = "block";
+
+    // Play music immediately after user click (essential for browsers)
+    bgMusic.play().catch(e => console.log("Playback failed:", e));
     
-    // Play music once unlocked
-    bgMusic.volume = 0.6;
-    bgMusic.play().catch(e => console.log("Music blocked:", e));
+    // Optional: Log Event
+    if(typeof logEvent === "function") logEvent("Page unlocked");
   } else {
-    alert("Wrong password! 🥺");
+    alert("Wrong password!");
   }
 };
 
-/* NO BUTTON LOGIC */
-let escape=0;
-const noBtn = document.getElementById("noBtn");
-const moveNo = () => {
-  escape++;
-  noBtn.style.position = "fixed";
-  noBtn.style.left = Math.random() * (window.innerWidth - 100) + "px";
-  noBtn.style.top = Math.random() * (window.innerHeight - 50) + "px";
-  document.getElementById("counter").innerText = `BABU avoided NO ${escape} times 😄`;
+/* FADE OUT LOGIC */
+function fadeOutMusic(audio){
+ let i=setInterval(()=>{
+  if(audio.volume>0.05) audio.volume-=0.05;
+  else{audio.pause();clearInterval(i);}
+ },100);
+}
+
+/* NO BUTTON */
+const noTexts=[
+ "No 😢","Are you sure?","Really??",
+ "BABU please 🥺","Risha… think again 💔",
+ "Hey! That was close 😳","Okay fine… YES is better 😌"
+];
+let noIndex=0,escape=0,detached=false;
+
+function moveNo(){
+ escape++; 
+ if(!detached){
+  detached=true;
+  noBtn.style.position="fixed";
+  document.body.appendChild(noBtn);
+ }
+ const maxX=window.innerWidth-noBtn.offsetWidth-10;
+ const maxY=window.innerHeight-noBtn.offsetHeight-10;
+ noBtn.style.left=Math.random()*maxX+"px";
+ noBtn.style.top=Math.random()*maxY+"px";
+
+ if(noIndex<noTexts.length-1){
+  noIndex++; noBtn.innerText=noTexts[noIndex];
+ }
+ counter.innerText=`BABU avoided NO ${escape} times 😄`;
+
+ if(escape>1){
+  yesBtn.classList.add("glow");
+  heartsReact();
+ }
+ if(escape>=3) noBtn.classList.add("nervous");
+}
+noBtn.onmouseenter=moveNo;
+noBtn.ontouchstart=e=>{e.preventDefault();moveNo()};
+
+/* YES */
+yesBtn.onclick=()=>{
+ yesBtn.style.display=noBtn.style.display="none";
+ kissBtn.style.display="inline-block";
+ message.innerHTML="BABU… I fell in love with your clumsiness, your baby acts, and the way you make my world softer ❤️";
 };
-noBtn.onmouseenter = moveNo;
-noBtn.ontouchstart = (e) => { e.preventDefault(); moveNo(); };
 
-/* YES BUTTON LOGIC */
-yesBtn.onclick = () => {
-  yesBtn.style.display = noBtn.style.display = "none";
-  kissBtn.style.display = "inline-block";
-  document.getElementById("message").innerHTML = "BABU… I fell in love with your baby acts and the way you make my world softer ❤️";
+/* KISS + WHATSAPP */
+let whatsappOpened=false;
+kissBtn.onclick=()=>{
+ kissBtn.disabled=true;
+ slideshow.style.display="block";
+ countdownBox.style.display="block";
+ calmText.style.display="block";
+ setTimeout(()=>thankYou.style.display="block",1200);
+ setTimeout(()=>fadeOutMusic(bgMusic),2000);
+
+ setTimeout(()=>{
+  if(!whatsappOpened){
+   whatsappOpened=true;
+   const msg=`Hey BABU ❤️,
+
+I know I’m not perfect…
+I make mistakes, I overthink,
+and sometimes I don’t say things the right way.
+
+But one thing I know for sure —
+my heart chose you, Risha 💖
+
+This Valentine’s Day,
+I just want to say sorry for every moment
+I ever hurt you without meaning to…
+
+and thank you for staying,
+for being soft,
+for being you 🌸
+
+Happy Valentine’s Day, BABU 🤍  
+– Yours
+*NOW AGAIN JUST GO TO THE BROWSER FOR SOME MORE SURPRISE*
+if possible please unblock me and I'm not disturbing you so frequently but 1 or 2 times within a month`;
+   window.open(
+    "https://wa.me/917478640411?text=" + encodeURIComponent(msg),
+    "_blank"
+   );
+  }
+ },3000);
 };
 
-/* KISS & WHATSAPP */
-kissBtn.onclick = () => {
-  kissBtn.disabled = true;
-  document.getElementById("slideshow").style.display = "block";
-  document.getElementById("calmText").style.display = "block";
-  setTimeout(() => document.getElementById("thankYou").style.display = "block", 1200);
-
-  setTimeout(() => {
-    const msg = "Hey BABU ❤️, Happy Valentine's Day! My heart chose you, Risha 💖";
-    window.open("https://wa.me/917478640411?text=" + encodeURIComponent(msg), "_blank");
-  }, 3000);
-};
-
-/* SLIDESHOW LOGIC */
-let slides = document.querySelectorAll(".slide");
-let idx = 0;
-setInterval(() => {
-  if (slides.length > 0) {
-    slides.forEach(s => s.classList.remove("active"));
-    idx = (idx + 1) % slides.length;
+/* SLIDESHOW */
+let slides=document.querySelectorAll(".slide");
+let idx=0;
+setInterval(()=>{
+ if(slides.length > 0){
+    slides.forEach(s=>s.classList.remove("active"));
+    idx=(idx+1)%slides.length;
     slides[idx].classList.add("active");
-  }
-}, 4000);
+ }
+},4000);
+
+/* COUNTDOWN */
+const picker=document.getElementById("datePicker");
+const text=document.getElementById("countdownText");
+function startCountdown(d){
+ setInterval(()=>{
+  const diff=d-new Date();
+  if(diff<=0){text.innerText="It’s today BABU 😍";return}
+  text.innerText=`${Math.floor(diff/86400000)} days to go 💕`;
+ },1000);
+}
+picker.onchange=()=>{
+ localStorage.setItem("date",picker.value);
+ startCountdown(new Date(picker.value+"T00:00"));
+};
+const saved=localStorage.getItem("date");
+if(saved){picker.value=saved;startCountdown(new Date(saved+"T00:00"))}
+
 </script>
 
 </body>
